Profile: Fix follow button alignment

--- a/src/styles/components/_profile-panel.scss
+++ b/src/styles/components/_profile-panel.scss
@@ -66,6 +66,7 @@
 
   .ProfilePanel-canopySection {
     display: flex;
+    align-items: center;
   }
 
   .ProfilePanel-canopySection:first-child {
